# capnp-trace

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
src/: CMakeLists.txt  capnp_trace.cc  immutable_schema_registry.cc.in  immutable_schema_registry.h  injection.h  rpc_message_reassembler.cc  rpc_message_reassembler.h  rpc_message_recorder.cc  rpc_message_recorder.h  rpc_tracer.cc  rpc_tracer.h  stream_info.h
test/: CMakeLists.txt  capnp_test_interface.cc  immutable_schema_registry_stub.cc  injection_test.cc  rpc_message_reassembler_test.cc  rpc_message_recorder_test.cc  stream_info_test.cc  test.capnp
test/testdata/: capnp_trace.TestInterface.in.dump  capnp_trace.TestInterface.out.dump  capnp_trace.TestInterface.recorded
tool/: generate_load_interface.awk
